about section completed. Contact section styling almost complete. email functionality successfully added via emailJS API

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("user_8l0SRuB2dGUJD1f48n4Yv");
+      })();
+    </script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap"
       rel="stylesheet"
